fixed layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,15 @@ body {
   background-blend-mode: darken;
 
   color: #fffdf4;
+  font-size: 1rem;
+  text-align: left;
+  font-weight: 500;
 
-  margin: 0;
+  margin: 0px;
   box-sizing: border-box;
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -28,4 +31,8 @@ code {
 * {
   /*! FOR DEBUGGING ONLY */
   /* border: 1px solid #f00 !important; */
+}
+
+#root {
+  width: 100%;
 }
