--- a/src/molecules/WebNav.css
+++ b/src/molecules/WebNav.css
@@ -1,13 +1,13 @@
 .web-nav-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 
   width: 100%;
   height: 72px;
   padding: 0px 16px;
-  margin: none;
+  margin: 0px;
   box-sizing: border-box;
 
   position: fixed;
@@ -15,4 +15,40 @@
 
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background-color: #111b33;
+}
+
+.logo {
+  min-width: 200px;
+  cursor: pointer;
+  color: #fffdf4;
+}
+
+.logo h1 {
+  padding: 0px;
+  margin: 0px;
+  font-size: 1.75rem;
+  font-family: system-ui;
+  font-weight: 900;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  width: 100%;
+}
+
+.nav-link {
+  font-weight: 400;
+  font-size: 1.1rem;
+  color: #fffdf4;
+}
+
+.nav-link:hover {
+  color: aquamarine;
+}
+
+.active {
+  color: #ffe870;
 }
