--- a/src/organisms/Layout.css
+++ b/src/organisms/Layout.css
@@ -4,9 +4,8 @@
   grid-template-rows: 72px auto;
   justify-items: center;
 
-  max-width: 100vw;
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
 
   box-sizing: border-box;
 }
@@ -17,18 +16,17 @@
   align-items: center;
 
   max-width: 720px;
-  width: 90%;
   min-height: 100vh;
   height: fit-content;
 
   background: rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(2px);
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-top: none;
   box-shadow: 0px 0px 12px 6px rgba(0, 0, 0, 0.25);
 
   padding: 16px;
   padding-top: 96px;
-  margin: 0px 16px 48px 16px;
+  margin: 0px 12px 48px 12px;
   box-sizing: border-box;
 }
