--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -1,8 +1,3 @@
-.splash {
-  font-size: 1rem;
-  text-align: left;
-}
-
 .poster {
   max-width: 100%;
   width: 480px;
